# api_devtest

./: .env.dist  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
api_devtest/apps/cs2TeamsApp/: admin.py  apps.py  models.py  urls.py  views.py
api_devtest/apps/cs2TeamsApp/migrations/: 0001_initial.py  0002_initial.py
api_devtest/apps/cs2TeamsApp/serializers/: playerSerializer.py  typePlayerSerializer.py
api_devtest/apps/usersApp/: apps.py
api_devtest/config/: asgi.py  urls.py  wsgi.py
api_devtest/config/django/: base.py
